--- a/docker/xcore/xcore.config
+++ b/docker/xcore/xcore.config
@@ -1,10 +1,10 @@
 ﻿- yaml
 - WLN_TIMEZONE=8
 - WLN_LISTEN_PORT=5001
-- WLN_MYSQL_HOST=127.0.0.1
+- WLN_MYSQL_HOST=mysql.ideploy.cn
 - WLN_MYSQL_NAME=school
-- WLN_MYSQL_UID=root
-- WLN_MYSQL_PWD=123456
+- WLN_MYSQL_UID=school
+- WLN_MYSQL_PWD=school
 - iApp=school
 - icenterHost=
 - schoolHost=
