--- a/docker/xcore/xcore.config
+++ b/docker/xcore/xcore.config
@@ -1,9 +1,9 @@
 ﻿- yaml
 - WLN_TIMEZONE=8
 - WLN_LISTEN_PORT=5001
-- WLN_MYSQL_HOST=mysql.ideploy.cn
+- WLN_MYSQL_HOST=47.94.236.222
 - WLN_MYSQL_NAME=school
-- WLN_MYSQL_UID=school
-- WLN_MYSQL_PWD=school
+- WLN_MYSQL_UID=junjun
+- WLN_MYSQL_PWD=jun123jun
 - iApp=school
 - schoolHost=
